--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -25,8 +25,8 @@
 
                         <nav>
                             <ul>
-                                <li class="active"><a href="#section2">THE POKEMON</a></li>
-                                <li class="active"><a href="#section4">CONTACT US</a></li>
+                                <li class="active"><a href="#Pokemon-Cards">THE POKEMON</a></li>
+                                <li class="active"><a href="#Contact-Us">CONTACT US</a></li>
                             </ul>
                         </nav>
                     </header>
@@ -37,7 +37,7 @@
                             <h3>TTLabs Gaming</h3>
                             <h1>POKE-WARS</h1>
                             <p>Go Poke vs Poke and find out which would win in an all out battle to the DEATH!!!!</p>
-                            <a href="#section3">BATTLE NOW</a>
+                            <a href="#The-Battleground">BATTLE NOW</a>
                             <a href="#" class="cta"><i class="fa-solid fa-play"></i> WATCH TUTORIAL</a>
                         </div>
 
@@ -49,15 +49,15 @@
             </div>
         </section>
 
-        <section id="section2">
+        <section id="Pokemon-Cards">
             <app-cards></app-cards>
         </section>
 
-        <section id="section3">
+        <section id="The-Battleground">
             <app-battleground></app-battleground>
         </section>
 
-        <section id="section4">
+        <section id="Contact-Us">
             <app-contact></app-contact>
         </section>
 
