--- a/src/app/components/battleground/battleground.component.html
+++ b/src/app/components/battleground/battleground.component.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <div class="srchbr">
-        <input type="text" name="search" placeholder="Champion 1..." #champion1 (keydown.enter)="getPokemon(champion1.value)">
-        <input type="text" name="search" placeholder="Champion 2..." #champion2 (keydown.enter)="searchChampion2ByName(champion2.value)">
+        <input type="text" name="search" placeholder="Champion 1..." #champion1 (keydown.enter)="getPokemon1(champion1.value)">
+        <input type="text" name="search" placeholder="Champion 2..." #champion2 (keydown.enter)="getPokemon2(champion2.value)">
     </div>
 
     <div class="main-stage">
