--- a/src/app/components/battleground/battleground.component.html
+++ b/src/app/components/battleground/battleground.component.html
@@ -11,13 +11,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!--
+
     <div class="srchbr">
         <input type="text" name="search" placeholder="Champion 1..." #champion1 (keydown.enter)="getPokemon1(champion1.value)">
         <input type="text" name="search" placeholder="Champion 2..." #champion2 (keydown.enter)="getPokemon2(champion2.value)">
     </div>
--->
-    <div class="stage">
+
+    <!-- <div class="stage">
         <div id="fighter1">
             <button type="button" (click)="getFighterOne()"> ROULETTE </button>
             <div *ngIf="fighterOne">
@@ -35,7 +35,7 @@
             </div>
         </div>
 
-    </div>
+    </div> -->
     
 
 </body>
