--- a/src/app/components/battleground/battleground.component.html
+++ b/src/app/components/battleground/battleground.component.html
@@ -17,6 +17,15 @@
         <input type="text" name="search" placeholder="Champion 2..." #champion2 (keydown.enter)="getPokemon2(champion2.value)">
     </div>
 
+    <!-- <div class="card">
+        <img src="/assets/img/charizard.png" alt="Pokemon" height="200px">
+        <div class="container">
+          <h4><b>Name : ....</b></h4>
+          <p>HP : ....  ----  XP : ....</p>
+          <p> A : ....  ----   D : ....</p>
+        </div>
+      </div> -->
+
     <!-- <div class="stage">
         <div id="fighter1">
             <button type="button" (click)="getFighterOne()"> ROULETTE </button>
