--- a/src/app/components/battleground/battleground.component.css
+++ b/src/app/components/battleground/battleground.component.css
@@ -35,13 +35,23 @@ input[type=text]:focus {
     width: 25%;
   }
 
-#stage {
-    margin: 100px;
-    display: flex;
-    justify-content: space-between;
-}
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    background-color: aliceblue;
+    transition: 0.3s;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px;
+  }
 
-.fighter1 {
-    display: flex;
-    justify-content: center;
-}
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    }
+  
+.container {
+    padding: 2px 16px;
+    }
+
+img {
+    border-radius: 5px 5px 0 0;
+    }
