--- a/src/app/components/battleground/battleground.component.css
+++ b/src/app/components/battleground/battleground.component.css
@@ -34,3 +34,14 @@ input[type=text] {
 input[type=text]:focus {
     width: 25%;
   }
+
+#stage {
+    margin: 100px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.fighter1 {
+    display: flex;
+    justify-content: center;
+}
