--- a/src/app/components/battleground/battleground.component.html
+++ b/src/app/components/battleground/battleground.component.html
@@ -16,6 +16,11 @@
         <input type="text" name="search" placeholder="Champion 1..." #champion1 (keydown.enter)="getPokemon1(champion1.value)">
         <input type="text" name="search" placeholder="Champion 2..." #champion2 (keydown.enter)="getPokemon2(champion2.value)">
     </div>
+    <div class="fighters">
+        <img src="{{fighterOne.sprites.front_default}}" id="one"> 
+        <img src="{{fighterTwo.sprites.front_default}}"> 
+    </div>
+   
 
     <!-- <div class="stage">
         <div id="fighter1">
