skeleton working, add css

--- a/src/app/components/battleground/battleground.component.css
+++ b/src/app/components/battleground/battleground.component.css
@@ -44,6 +44,9 @@ input[type=text]:focus {
     height: 500px;
 }
 
+h2 {
+    color: white;
+}
 
 .fighters #one{
     -webkit-transform: scaleX(-1);
